# umber_dds

./: .gitmodules  Cargo.toml  DDS_entity_gen.md  LICENSE  README.md  SampleAnalysis.md  SpecNote.md
.github/workflows/: rust.yml
RSRTPS/: Cargo.toml
UmberDDS/: Cargo.toml  README.md
UmberDDS/examples/: shapes_demo.rs  shapes_demo_for_autotest.rs
UmberDDS/src/: error.rs  helper.rs  lib.rs  message.rs  structure.rs
UmberDDS/src/dds/: datawriter.rs  event_loop.rs  subscriber.rs  topic.rs
UmberDDS/src/discovery/structure/cdr/: size.rs
UmberDDS/src/message/: message_receiver.rs  submessage.rs
UmberDDS/src/message/submessage/: element.rs  submessage_header.rs
UmberDDS/src/message/submessage/element/: acknack.rs  data.rs  datafrag.rs  infodst.rs  nackfrag.rs
UmberDDS/src/network/: net_util.rs  udp_sender.rs
UmberDDS/src/rtps/: cache.rs  reader.rs  writer.rs
UmberDDS/src/structure/: duration.rs  guid.rs  proxy.rs  topic_kind.rs
ddsdata_derive/: Cargo.toml
ddsdata_derive/src/: lib.rs
docs/: Entityの生存管理.md  ImpleNote.md  UmberDDS_modules.drawio  umber_dds_modules.drawio  スペックノート.md
dosc/: SpecNote.md
examples/: shapes_demo.rs  shapes_demo_for_autotest.rs
examples/shapes_demo/: main.rs  shapes_logging.yml
examples/shapes_demo_for_autotest/: main.rs
keyed_derive/: Cargo.toml
keyed_derive/src/: lib.rs
refarence/: README.md  サンプル解析.md
refarence/dds-analysis-docker/: LICENSE  README.md  build.sh  compose.yml  log4rs.yml
refarence/dds-analysis-docker/cyclone_shapedemo/: CMakeLists.txt  Shape.idl
refarence/dds-analysis-docker/cyclone_shapesdemo/: CMakeLists.txt  publisher.c  subscriber.c
refarence/dds-analysis-docker/publisher/: Dockerfile
refarence/dds-analysis-docker/subscriber/: Dockerfile
refarence/dds-analysis-docker/subscriber/rust-subscriber/: Cargo.toml
refarence/dds-analysis-docker/subscriber/rust-subscriber/src/: main.rs
refarence/dds-analysis-docker/workspace_DDSHelloWorld/: CMakeLists.txt
rs-rtps/: Cargo.toml  README.md
rs-rtps/examples/: shapes_demo.rs
rs-rtps/src/: dds.rs  discovery.rs  lib.rs  main.rs  message.rs  network.rs  rtps.rs  structure.rs
rs-rtps/src/dds/: datareader.rs  datawriter.rs  event_loop.rs  participant.rs  publisher.rs  qos.rs  subscriber.rs  tokens.rs  topic.rs  typedesc.rs
rs-rtps/src/discovery/: discovery.rs  discovery_db.rs  structure.rs
rs-rtps/src/discovery/structure/: builtin_endpoint.rs  data.rs  topic.rs
rs-rtps/src/discovery/structure/cdr/: de.rs
rs-rtps/src/message/: message.rs  message_builder.rs  message_header.rs  message_receiver.rs  submessage.rs
rs-rtps/src/message/submessage/: element.rs  serialize.rs  submessage_flag.rs  submessage_header.rs
rs-rtps/src/message/submessage/element/: acknack.rs  data.rs  datafrag.rs  gap.rs  heartbeat.rs  heartbeatfrag.rs  infodst.rs  inforeply.rs  inforeplyIp4.rs  inforeply_ip4.rs  infosrc.rs  infots.rs  nackfrag.rs
rs-rtps/src/network/: net_util.rs  udp_listinig_socket.rs  udp_sender.rs
rs-rtps/src/rtps/: cache.rs  guid.rs  message.rs  message_receiver.rs  reader.rs  reader_locator.rs  submessage.rs  writer.rs
rs-rtps/src/structure/: duration.rs  entity.rs  entityId.rs  entity_id.rs  guid.rs  parameterId.rs  parameter_id.rs  proxy.rs  topic_kind.rs  vendorId.rs  vendor_id.rs
src/: '  dds.rs  discovery.rs  error.rs  helper.rs  lib.rs  message.rs  structure.rs  utils.rs
src/dds/: datareader.rs  datawriter.rs  event_loop.rs  key.rs  participant.rs  publisher.rs  qos.rs  sample.rs  subscriber.rs  tokens.rs  topic.rs
src/discovery/: discovery.rs  discovery_db.rs  structure.rs
src/discovery/structure/: cdr.rs  data.rs
src/discovery/structure/cdr/: de.rs  encapsulation.rs  size.rs
src/message/: message_builder.rs  message_header.rs  message_receiver.rs  submessage.rs
src/message/submessage/: element.rs  submessage_flag.rs  submessage_header.rs
src/message/submessage/element/: acknack.rs  data.rs  datafrag.rs  gap.rs  heartbeat.rs  heartbeatfrag.rs  infodst.rs  inforeply_ip4.rs  infosrc.rs  nackfrag.rs
src/network/: net_util.rs  udp_listinig_socket.rs  udp_sender.rs
src/rtps/: cache.rs  reader.rs  reader_locator.rs  writer.rs
src/structure/: duration.rs  entity_id.rs  guid.rs  parameter_id.rs  proxy.rs  topic_kind.rs  vendor_id.rs
test/: .gitignore  LICENSE  README.md  build.sh  compose.yml  docker-compose.yml  test.sh
test/cyclonedds_img/: Dockerfile
test/fastdds_img/: Dockerfile
test/otherdds/: .gitignore  Dockerfile
test/otherdds/msgs/shapes_interfaces/: Cargo.toml  cksum
test/otherdds/msgs/shapes_interfaces/src/: lib.rs
test/otherdds/shapes_demo_cyclonedds/: publisher.c  subscriber.c
test/otherdds/shapes_demo_rustdds/: Cargo.toml
test/otherdds/shapes_demo_rustdds/src/: main.rs
test/otherdds/shapes_demo_safe_drive/src/: Cargo.toml
test/otherdds/shapes_demo_safe_drive/src/shapes_interfaces/: CMakeLists.txt
test/otherdds/workspace_FastDDSShapesDemo/src/: ShapeCdrAux.hpp  ShapesDemoSubscriber.cpp
test/otherdds2/: Dockerfile
test/otherdds2/foo/: .bash_history
test/otherdds_dev/: Dockerfile
test/otherdds_dev/msgs/shapes_interfaces/: build.rs  cksum
test/otherdds_dev/workspace_FastDDSShapesDemo/: CMakeLists.txt
test/otherdds_dev/workspace_FastDDSShapesDemo/src/: Shape.idl  ShapeCdrAux.ipp  ShapePubSubTypes.cxx  ShapeTypeObjectSupport.cxx  ShapesDemoPublisher.cpp
test/test_cases/: test_case1.sh  test_case2.sh  test_case3.sh  test_case4.sh  test_case5.sh
test/umberdds/: .gitignore  Dockerfile
(+12 files in other folders)
