[package]
name = "umberdds"
version = "0.1.0"
edition = "2021"
description = "UmberDDS: An experimental Rust implementation of Data Distribution Service"
authors = ["Ryosuke Tomishige, TIER IV, Inc."]
readme = "README.md"
license-file = "LICENSE"

[profile.release]
panic = 'abort'
[profile.dev]
panic = 'abort'

[workspace]
members = [".", "ddsdata_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ddsdata_derive = { version = "0.1.0", path = "ddsdata_derive" }
log = { version = "0.4" }
byteorder = { version = "1.4.3", default-features = false }
bytes = { version = "1.7", default-features = false }
enumflags2 = { version = "0.7.7", default-features = false, features = [
    "serde",
] }
mio_v06 = { package = "mio", version = "0.6.23" }
mio_v08 = { package = "mio", version = "0.8.11", features = ["os-poll", "net"] }
mio-extras = "2.0.6"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
socket2 = "0.5"
speedy = { git = "https://github.com/koute/speedy", default-features = false, features = [
    "speedy-derive",
    "alloc",
] }
if-addrs = "0.13"
cdr = "0.2.4"
chrono = { version = "0.4", optional = true }
thiserror = "1.0"
serde_repr = "0.1.18"
awkernel_sync = { git = "https://github.com/tier4/awkernel_sync.git" }
md5 = { version = "0.7.0", default-features = false }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
serde_derive = "1"
log4rs = "1.3.0"

[features]
default = ["std"]
std = ["dep:chrono", "awkernel_sync/std"]
awkernel_x86 = ["awkernel_sync/x86"]
awkernel_aarch64 = ["awkernel_sync/aarch64"]
